ecmascript/parser/tests/typescript-errors/tsc/parser/ecmascript5/MemberAccessorDeclarations/parserMemberAccessorDeclaration9/input.ts.stderr
error: Unexpected token `get`. Expected * for generator, private key, identifier or async
 --> $DIR/tests/typescript-errors/tsc/parser/ecmascript5/MemberAccessorDeclarations/parserMemberAccessorDeclaration9/input.ts:3:19
  |
3 |     static public get Foo() { }
  |                   ^^^

